# titlan

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/brand/: README.md
deploy/: Dockerfile  README.md  tezca-relay.service
docs/: acceptance-venues.md  build.md  device-acceptance.md
docs/checklists/: 4b2-e-locked-boot.md  4b2-f-doze-latency.md
proto/: envelope.md  inner-frame.md  pairing.md  relay-api.md
scripts/: check-backup-rules.sh  check-invariants.sh  device-doze-latency.sh  device-locked-boot.sh  repro-build.sh
tezca-core/: Cargo.toml
tezca-core/examples/: deposit_harness.rs
tezca-core/fuzz/: Cargo.toml
tezca-core/fuzz/corpus/envelope_parse/: v1_ratchet  v2_setup
tezca-core/fuzz/corpus/inner_parse/: v3_chat  v4_posture
tezca-core/fuzz/fuzz_targets/: envelope_parse.rs  inner_parse.rs
tezca-core/src/: client.rs  config.rs  error.rs  ffi.rs  identity.rs  lib.rs  licensing.rs  pairing.rs  recovery.rs  session.rs
tezca-core/src/envelope/: inner.rs  mod.rs
tezca-core/src/relay_client/: backoff.rs  http.rs  mod.rs  ws.rs
tezca-core/src/relay_client/ws/: pin.rs
tezca-core/src/storage/: mod.rs  schema.rs  signal_stores.rs
tezca-core/tests/: envelope_spec.proptest-regressions  envelope_spec.rs  persistence.rs  session_roundtrip.rs
tezca-relay/: Cargo.toml
tezca-relay/examples/: gen_test_cert.rs
tezca-relay/fuzz/: Cargo.toml
tezca-relay/fuzz/fuzz_targets/: ack_frame.rs  deposit_admissible.rs
tezca-relay/src/: api.rs  config.rs  hardening.rs  lib.rs  limits.rs  main.rs  state.rs  wire.rs
tezca-relay/tests/: limits.rs  put_mailbox.rs  relay_client_e2e.rs  relay_lifecycle.rs  tls_anchor_e2e.rs  zero_knowledge.rs
tezca-relay/tests/common/: mod.rs
titlan-android/: build.gradle.kts  gradle.properties  settings.gradle.kts
titlan-android/app/: build.gradle.kts  gradle.lockfile
titlan-android/app/src/androidTest/kotlin/app/titlan/: BackupDisabledTest.kt  FlagSecureTest.kt  Inv1AtRestTest.kt  LaunchSyncTest.kt  LogcatHygieneTest.kt  TitlanTestRunner.kt
titlan-android/app/src/androidTest/kotlin/app/titlan/crypto/: DbKeyManagerTest.kt
titlan-android/app/src/androidTest/kotlin/app/titlan/pairing/: PairingRoundTripTest.kt
titlan-android/app/src/androidTest/kotlin/app/titlan/sync/: FakeRelay.kt  RecoveryTest.kt  SyncLogcatHygieneTest.kt  SyncManifestTest.kt  SyncServiceLifecycleTest.kt
titlan-android/app/src/debug/: AndroidManifest.xml
titlan-android/app/src/debug/res/xml/: network_security_config.xml
titlan-android/app/src/main/: AndroidManifest.xml
titlan-android/app/src/main/kotlin/app/titlan/: MainActivity.kt  TitlanApp.kt
titlan-android/app/src/main/kotlin/app/titlan/core/: AppCore.kt  CoreClient.kt
titlan-android/app/src/main/kotlin/app/titlan/crypto/: DbKeyManager.kt
titlan-android/app/src/main/kotlin/app/titlan/pairing/: PairingCoordinator.kt  PairingScreen.kt  QrCodec.kt
titlan-android/app/src/main/kotlin/app/titlan/sync/: SyncController.kt  SyncEvents.kt  SyncService.kt
titlan-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
titlan-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
titlan-android/app/src/main/res/values/: colors.xml  strings.xml
titlan-android/app/src/main/res/xml/: data_extraction_rules.xml
titlan-android/app/src/test/kotlin/app/titlan/: ScaffoldSanityTest.kt
titlan-android/gradle/: libs.versions.toml
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: main.rs
