# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Oculux Technologies LLC

[workspace]
resolver = "3"
members = ["tezca-core", "tezca-relay", "uniffi-bindgen"]
# The fuzz crates are their own workspaces (cargo-fuzz convention,
# nightly-only).
exclude = ["tezca-core/fuzz", "tezca-relay/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[workspace.dependencies]
# A2/INV-6: the official libsignal Rust crate is the ONLY source of
# cryptographic primitives. Git-only upstream (not on crates.io); pinned tag,
# exact rev sealed in Cargo.lock. deny.toml enforces the primitive-crate ban
# outside libsignal's dependency tree.
libsignal-protocol = { version = "0.1.0", git = "https://github.com/signalapp/libsignal", tag = "v0.97.2" }
# A4: SQLCipher at-rest encryption (locked decision; vendored OpenSSL for
# self-contained Android cross-builds later).
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
# OS CSPRNG handle passed INTO libsignal APIs (their functions require a
# caller-supplied Rng + CryptoRng). PINNED to libsignal's rand major: bump
# ONLY in lockstep with a libsignal bump, verified against the RNG trait
# bounds in identity/session key generation (maintainer decision 2026-07-14;
# see .github/dependabot.yml ignore rule).
rand = "0.9"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
hex = "0.4"
async-trait = "0.1"
# Executor shim: libsignal store traits have async signatures; our SQL impls
# are synchronous underneath.
futures = { version = "0.3", default-features = false, features = ["executor"] }
tempfile = "3"
proptest = "1"
# Relay server stack (maintainer-approved F2). rustls runs on the ring
# provider (INV-6 names ring); aws-lc-rs is deliberately kept out of the
# tree via default-features = false everywhere.
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "ws"] }
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls-no-provider"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util"] }
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustix = { version = "1", default-features = false, features = ["std", "process", "mm"] }
tungstenite = "0.30"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "ring"] }
# Phase 4a relay client (maintainer-approved F2/2a). All TLS runs on the ring
# provider; aws-lc-rs is kept out of the tree (default-features=false + the
# deny.toml aws-lc-rs ban). reqwest uses rustls-no-provider (we install ring);
# tokio-tungstenite carries no built-in TLS (we hand it a tokio-rustls/ring
# stream for wss://). uniffi is MPL-2.0, consumed unmodified — see deny.toml.
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
tokio-tungstenite = { version = "0.30", default-features = false, features = ["handshake"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-platform-verifier = "0.7"
# ring: INV-6-approved (named alongside libsignal/rustls). Used only for the
# SHA-256 of a cert SPKI in the optional per-conversation TLS pin verifier.
ring = "0.17"
uniffi = "0.32"

# Mirror of libsignal's own [patch.crates-io] (patches do not propagate from
# dependencies): their audited curve25519-dalek fork. Same tag as v0.97.2.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

# Phase 5 targets zero unsafe blocks in core (work order §6). Deny it now;
# any future exception needs an explicit, justified `#[allow(unsafe_code)]`.
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[profile.release]
# Strip symbols: smaller artifacts and fewer host-path strings embedded in the
# binary, which the reproducible-build pipeline (scripts/repro-build.sh) relies on.
strip = "symbols"
# Mirror libsignal's tested release configuration: overflow checks on, except
# the three crates upstream exempts for performance.
overflow-checks = true

[profile.release.package.curve25519-dalek]
overflow-checks = false

[profile.release.package.sha2]
overflow-checks = false

[profile.release.package.hmac]
overflow-checks = false
