# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Oculux Technologies LLC

[package]
name = "tezca-core"
description = "Shared E2EE core for the Tezca platform: identity, sessions, envelope, storage, relay client (Titlan messenger MVP)"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Guard against accidental crates.io publication while the MVP is in flight.
publish = false

[dependencies]
# INV-6: libsignal is the only crypto source; rusqlite/SQLCipher is locked by
# A4; rand supplies the OS CSPRNG that libsignal's API contract requires the
# caller to pass in. No other crypto-adjacent dependency without explicit
# human approval — deny.toml bans primitive crates outside libsignal's tree.
libsignal-protocol = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
