# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Oculux Technologies LLC

[package]
name = "tezca-core"
description = "Shared E2EE core for the Tezca platform: identity, sessions, envelope, storage, relay client (Titlan messenger MVP)"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Guard against accidental crates.io publication while the MVP is in flight.
publish = false

# cdylib: the Android app loads tezca-core as libtezca_core.so via the
# UniFFI bindings (A3); rlib stays for the Rust workspace consumers.
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# INV-6: libsignal is the only crypto source; rusqlite/SQLCipher is locked by
# A4; rand supplies the OS CSPRNG that libsignal's API contract requires the
# caller to pass in. No other crypto-adjacent dependency without explicit
# human approval — deny.toml bans primitive crates outside libsignal's tree.
libsignal-protocol = { workspace = true }
# 4b-2 green (maintainer-ratified B1/F-dep-1, F-dep-2): libsignal's crypto
# crate for HMAC-SHA256 (proof-of-scan + §8 derived-mailbox PRF), and subtle
# for constant-time proof compare. Both INV-6-clean (see workspace ledger).
signal-crypto = { workspace = true }
subtle = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
# Phase 4a relay client + UniFFI surface (F2/2a; ring-only TLS).
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
ring = { workspace = true }
uniffi = { workspace = true }

[features]
# Debug/CI-only trust anchor for the test relay (maintainer-ratified 4b-2):
# with this feature AND TEZCA_TEST_RELAY_PIN (hex SHA-256 of the relay's leaf
# cert DER) set, connections carrying no per-conversation pin trust exactly
# that certificate via the audited ws/pin.rs PinVerifier. Never a default;
# never in the release .so (scripts/check-invariants.sh asserts both).
test-relay-anchor = []

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
# Self-signed leaf certs for the TLS-pin unit tests (ws/pin.rs).
rcgen = { workspace = true }

[lints]
workspace = true
