# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2026 Oculux Technologies LLC

[package]
name = "tezca-relay"
description = "Blind, stateless message relay for the Tezca platform: RAM-only mailboxes with TTL expiry, no database, no disk persistence"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Phase 3 (work order §6) adds: axum (or tonic), tokio, and rate limiting.
# INV-2 (blind relay) and INV-3 (no server-side persistence) constrain every
# dependency and every logging statement added here.

[dev-dependencies]
# Acceptance tests drive a real relay child process end-to-end with real
# tezca-core clients (work order §6 Phase 3 acceptance).
tezca-core = { path = "../tezca-core" }
tempfile = { workspace = true }
# WebSocket test client. NOTE: tungstenite requires `sha1` (RFC 6455
# handshake) — needs the maintainer-approved wrapper extension in deny.toml.
tungstenite = "0.28"

[lints]
workspace = true
