# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2026 Oculux Technologies LLC

[package]
name = "tezca-relay"
description = "Blind, stateless message relay for the Tezca platform: RAM-only mailboxes with TTL expiry, no database, no disk persistence"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
# Small library surface so the parsers (the code touching attacker bytes)
# are unit-testable and fuzzable; the binary wraps it.
name = "tezca_relay"
path = "src/lib.rs"

[[bin]]
name = "tezca-relay"
path = "src/main.rs"

[dependencies]
# INV-2 (blind relay) and INV-3 (no server-side persistence) constrain every
# dependency here. NO logging framework is present by policy: tracing exists
# only as an inert transitive of axum/tower (no subscriber is ever
# installed), and scripts/check-invariants.sh forbids log macros in src/.
axum = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
rand = { workspace = true }
rustix = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
# Acceptance tests drive a real relay child process end-to-end with real
# tezca-core clients (work order §6 Phase 3 acceptance). test-relay-anchor
# (dev-scope ONLY — examples/tests; the relay binary has no tezca-core dep)
# lets the TLS-anchor e2e validate the exact debug-.so trust path that the
# Android instrumented suite uses against the rcgen-served CI relay.
tezca-core = { path = "../tezca-core", features = ["test-relay-anchor"] }
# SHA-256 of the test cert DER (the pin value) for the TLS-anchor harness;
# ring is INV-6-approved and already in the workspace tree via tezca-core.
ring = { workspace = true }
tempfile = { workspace = true }
# WebSocket test client. sha1 comes with it: RFC 6455 requires SHA-1 in the
# WS opening handshake — maintainer-approved wrapper in deny.toml.
tungstenite = { workspace = true }
# Self-signed certs for the TLS smoke test (ring-backed; INV-6 names ring).
rcgen = { workspace = true }

[lints]
workspace = true
