# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Oculux Technologies LLC

[package]
name = "uniffi-bindgen"
description = "Build tool: generates the Kotlin bindings for tezca-core (A3). Never shipped."
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
uniffi = { workspace = true, features = ["cli"] }

[lints]
workspace = true
